removing second main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Ex4)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Ex4 main.cpp MemoryConstants.h PhysicalMemory.cpp PhysicalMemory.h SimpleTest.cpp VirtualMemory.h VirtualMemory.cpp)
+add_executable(Ex4 MemoryConstants.h PhysicalMemory.cpp PhysicalMemory.h SimpleTest.cpp VirtualMemory.h VirtualMemory.cpp)
